[gd_scene load_steps=14 format=3 uid="uid://whogxsmuiqnw"]

[ext_resource type="Script" path="res://Assets/Scripts/menu_nuevo.gd" id="1_lny0i"]
[ext_resource type="Theme" uid="uid://dw1hiod4ykxab" path="res://Assets/Themes/button_theme.tres" id="1_ty4a6"]
[ext_resource type="FontFile" uid="uid://bqmk678mgclqb" path="res://Assets/Fonts/NotJamScrawl12.ttf" id="2_namtc"]
[ext_resource type="Theme" uid="uid://dvsojcmw5svs1" path="res://Assets/Themes/label_ingame.tres" id="4_e1nl7"]
[ext_resource type="Theme" uid="uid://bxf4bt3q4vwjx" path="res://Assets/Themes/new_theme.tres" id="7_0fh4u"]

[sub_resource type="Theme" id="Theme_ri73g"]
default_font = ExtResource("2_namtc")
default_font_size = 45

[sub_resource type="Theme" id="Theme_2b8vt"]
default_font = ExtResource("2_namtc")
default_font_size = 180

[sub_resource type="Theme" id="Theme_md8ar"]
default_font = ExtResource("2_namtc")
default_font_size = 144

[sub_resource type="GDScript" id="GDScript_41dab"]
script/source = "extends Control

@onready var cardData = preload(\"res://Assets/Scripts/cardDataBase.gd\")
@onready var carta_ui = preload(\"res://Assets/Scenes/cartaPreview.tscn\")

func _ready():
	
	for i in cardData.DATA.size():
		var resourcePath = cardData.DATA[str(i)]
		var cardInfo = load(resourcePath)
		var _card = cardInfo.duplicate()
		var nueva_carta = carta_ui.instantiate()
		nueva_carta.card_info = _card
		add_child(nueva_carta)
	for i in get_children():
		i.cantidad.hide()
"

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x65uh"]
bg_color = Color(0.0687983, 0.0687983, 0.0687982, 0.882353)

[sub_resource type="Animation" id="Animation_1yj3y"]
resource_name = "pulsar_empezar"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_inicio/titulo_menu:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.6, 0.7, 1.6, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(267, 443.5), Vector2(267, 456), Vector2(267, 293), Vector2(267, 307)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menu_inicio/creditos:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menu_inicio/pulsa_empezar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("menu/VBoxContainer:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8, 1.36667, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(845.5, 1170), Vector2(845.5, 591), Vector2(845.5, 640)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("menu/VBoxContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_41wvt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_inicio/titulo_menu:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(267, 443.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menu_inicio/creditos:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menu_inicio/pulsa_empezar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("menu/VBoxContainer:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(845.5, 640)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("menu/VBoxContainer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2xkpg"]
_data = {
"RESET": SubResource("Animation_41wvt"),
"pulsar_empezar": SubResource("Animation_1yj3y")
}

[node name="MenuNuevo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lny0i")

[node name="menu_inicio" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="pulsa_empezar" type="RichTextLabel" parent="menu_inicio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.5
offset_top = 142.406
offset_right = 414.5
offset_bottom = 207.406
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(414, 32)
theme = SubResource("Theme_ri73g")
theme_override_colors/font_shadow_color = Color(0, 0.188235, 0.207843, 1)
theme_override_constants/shadow_offset_y = 15
bbcode_enabled = true
text = "[pulse freq=1.0 color=#ffffff40 ease=-2.0][wave amp=40.0 freq=4.0 connected=1][center]Pulsa espacio para empezar[/center][/wave][/pulse]"

[node name="creditos" type="RichTextLabel" parent="menu_inicio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -570.5
offset_top = -149.371
offset_right = 570.5
offset_bottom = -78.3713
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(570, 35)
theme = SubResource("Theme_ri73g")
theme_override_colors/font_shadow_color = Color(0, 0.188235, 0.207843, 1)
theme_override_constants/shadow_offset_y = 15
bbcode_enabled = true
text = "[wave amp=40.0 freq=4.0 connected=1][center]Santiago Llamas y Miguel Martinez presentan[/center][/wave]"

[node name="titulo_menu" type="RichTextLabel" parent="menu_inicio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -693.0
offset_top = -96.5
offset_right = 693.0
offset_bottom = 96.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(693, 96)
theme = SubResource("Theme_2b8vt")
theme_override_colors/font_shadow_color = Color(0, 0.188235, 0.207843, 1)
theme_override_constants/shadow_offset_y = 30
bbcode_enabled = true
text = "[wave amp=40.0 freq=4.0 connected=1][center]RISING TADES[/center][/wave]"

[node name="menu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="titulo_menu" type="RichTextLabel" parent="menu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -523.0
offset_top = -220.0
offset_right = 523.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(523, 83)
theme = SubResource("Theme_md8ar")
theme_override_colors/font_shadow_color = Color(0, 0.188235, 0.207843, 1)
theme_override_constants/shadow_offset_y = 30
bbcode_enabled = true
text = "[wave amp=40.0 freq=4.0 connected=1][center]RISING TADES[/center][/wave]"

[node name="VBoxContainer" type="VBoxContainer" parent="menu"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = 100.0
offset_right = 114.5
offset_bottom = 376.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="boton_jugar" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
text = "JUGAR"

[node name="boton_opciones" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
text = "OPCIONES"

[node name="boton_coleccion" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
text = "BARAJA"

[node name="boton_salir" type="Button" parent="menu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
text = "SALIR"

[node name="opciones" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="opciones"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -285.0
offset_top = -143.0
offset_right = 285.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_e1nl7")
theme_override_font_sizes/font_size = 27
current_tab = 0

[node name="Video" type="TabBar" parent="opciones/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="HBoxContainer" type="HBoxContainer" parent="opciones/TabContainer/Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -199.5
offset_top = -43.5
offset_right = 199.5
offset_bottom = 14.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="opciones/TabContainer/Video/HBoxContainer"]
layout_mode = 2

[node name="Screen Mode" type="Label" parent="opciones/TabContainer/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_e1nl7")
theme_override_font_sizes/font_size = 27
text = "Modo de pantalla  "

[node name="V-Sync" type="Label" parent="opciones/TabContainer/Video/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_e1nl7")
theme_override_font_sizes/font_size = 27
text = "V-Sync"

[node name="VBoxContainer2" type="VBoxContainer" parent="opciones/TabContainer/Video/HBoxContainer"]
layout_mode = 2

[node name="screen_mode" type="OptionButton" parent="opciones/TabContainer/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 27
selected = 1
item_count = 2
popup/item_0/text = "Ventana"
popup/item_1/text = "Completa"
popup/item_1/id = 1

[node name="v_sync" type="OptionButton" parent="opciones/TabContainer/Video/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 27
selected = 1
item_count = 2
popup/item_0/text = "Desactivado"
popup/item_1/text = "Activado"
popup/item_1/id = 1

[node name="volver_button" type="Button" parent="opciones/TabContainer/Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -75.0
offset_right = 48.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 24
text = "Volver"

[node name="Guardado" type="TabBar" parent="opciones/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="personaliza" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="titulo_personaliza" type="RichTextLabel" parent="personaliza"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -568.0
offset_top = 32.0
offset_right = 305.0
offset_bottom = 146.0
grow_horizontal = 2
scale = Vector2(1.3, 1.3)
theme = SubResource("Theme_md8ar")
theme_override_colors/font_shadow_color = Color(0, 0.188235, 0.207843, 1)
theme_override_constants/shadow_offset_y = 30
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "[wave amp=40.0 freq=4.0 connected=1][center]PERSONALIZA TU MAZO[/center][/wave]"

[node name="ScrollContainer" type="ScrollContainer" parent="personaliza"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="personaliza/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 65
theme_override_constants/v_separation = 25
columns = 4
script = SubResource("GDScript_41dab")

[node name="baraja_seleccionada" type="Label" parent="personaliza"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 112.0
offset_top = -62.5
offset_right = 234.0
offset_bottom = -34.5
grow_vertical = 2
theme = ExtResource("4_e1nl7")
theme_override_font_sizes/font_size = 27
text = "Editando:"

[node name="VBoxContainer" type="VBoxContainer" parent="personaliza"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = 44.0
offset_right = 352.0
offset_bottom = 287.0
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="boton_info_mazo" type="Button" parent="personaliza/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
text = "Ver mazo"

[node name="boton_guardar_cambios" type="Button" parent="personaliza/VBoxContainer"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme = ExtResource("1_ty4a6")
text = "Guardar cambios"

[node name="boton_volver_personaliza" type="Button" parent="personaliza/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
text = "Cancelar"

[node name="baraja_seleccion" type="OptionButton" parent="personaliza"]
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 98.0
offset_top = -12.0
offset_right = 286.0
offset_bottom = 44.0
grow_vertical = 2
theme = ExtResource("1_ty4a6")
selected = 0
item_count = 2
popup/item_0/text = "Baraja 1"
popup/item_1/text = "Baraja 2"
popup/item_1/id = 1

[node name="coleccion" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="titulo_coleccion" type="RichTextLabel" parent="coleccion"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -344.0
offset_top = 56.0
offset_right = 346.0
offset_bottom = 164.0
grow_horizontal = 2
scale = Vector2(1.3, 1.3)
pivot_offset = Vector2(345, 67)
theme = SubResource("Theme_md8ar")
theme_override_colors/font_shadow_color = Color(0, 0.188235, 0.207843, 1)
theme_override_constants/shadow_offset_y = 30
theme_override_font_sizes/normal_font_size = 75
bbcode_enabled = true
text = "[wave amp=40.0 freq=4.0 connected=1][center]COLECCIóN[/center][/wave]"

[node name="ScrollContainer" type="ScrollContainer" parent="coleccion"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 192.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="coleccion/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 65
theme_override_constants/v_separation = 25
columns = 4
script = SubResource("GDScript_41dab")

[node name="VBoxContainer" type="VBoxContainer" parent="coleccion"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 88.0
offset_top = -34.0
offset_right = 292.0
offset_bottom = 44.0
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="boton_editar_mazo" type="Button" parent="coleccion/VBoxContainer"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 36
text = "Editar mazo"

[node name="boton_volver_coleccion" type="Button" parent="coleccion/VBoxContainer"]
custom_minimum_size = Vector2(230, 50)
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 36
text = "Volver"

[node name="confirmar_mazo" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="confirmar_mazo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -323.0
offset_top = -148.0
offset_right = 323.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_0fh4u")

[node name="mazo_descripcion_confirmar" type="Label" parent="confirmar_mazo/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -127.0
offset_top = 40.0
offset_right = 297.0
offset_bottom = 209.0
grow_horizontal = 2
theme = ExtResource("4_e1nl7")
theme_override_font_sizes/font_size = 18
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="confirmar_mazo/Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 51.0
offset_top = -52.0
offset_right = 171.0
offset_bottom = 24.0
grow_vertical = 2
theme_override_constants/separation = 20

[node name="boton_seleccionar_mazo1" type="Button" parent="confirmar_mazo/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 27
text = "Mazo 1"

[node name="boton_seleccionar_mazo2" type="Button" parent="confirmar_mazo/Panel/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 27
text = "Mazo 2"

[node name="HBoxContainer" type="HBoxContainer" parent="confirmar_mazo/Panel"]
layout_mode = 0
offset_left = 195.0
offset_top = 224.0
offset_right = 388.0
offset_bottom = 264.0
theme_override_constants/separation = 150

[node name="boton_proceder" type="Button" parent="confirmar_mazo/Panel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 27
text = "Jugar"

[node name="boton_atras_confirmar" type="Button" parent="confirmar_mazo/Panel/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 27
text = "Cancelar"

[node name="confirmar_mazo_coleccion" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="confirmar_mazo_coleccion"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -266.5
offset_top = -148.0
offset_right = 266.5
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("7_0fh4u")

[node name="mazo_descripcion_coleccion" type="Label" parent="confirmar_mazo_coleccion/Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -243.0
offset_top = 28.0
offset_right = 243.0
offset_bottom = 197.0
grow_horizontal = 2
theme = ExtResource("4_e1nl7")
theme_override_font_sizes/font_size = 18
text = "texto de ejemplo
1x
2x"

[node name="HBoxContainer" type="HBoxContainer" parent="confirmar_mazo_coleccion/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -133.0
offset_top = -64.0
offset_right = 133.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 100
alignment = 1

[node name="boton_guardar_mazo" type="Button" parent="confirmar_mazo_coleccion/Panel/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 18
text = "Guardar mazo"

[node name="boton_atras_coleccion" type="Button" parent="confirmar_mazo_coleccion/Panel/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ty4a6")
theme_override_font_sizes/font_size = 18
text = "Seguir editando"

[node name="menu_info_mazo" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="menu_info_mazo"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -824.0
offset_top = -356.0
offset_right = 832.0
offset_bottom = 356.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_x65uh")

[node name="ScrollContainer" type="ScrollContainer" parent="menu_info_mazo/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -780.0
offset_top = -324.0
offset_right = 780.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2

[node name="container_info_mazo" type="GridContainer" parent="menu_info_mazo/Panel/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 10

[node name="boton_volver_info_mazo" type="Button" parent="menu_info_mazo/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -68.0
offset_top = -80.0
offset_right = 68.0
offset_bottom = -26.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("1_ty4a6")
text = "Okay"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2xkpg")
}

[connection signal="pressed" from="menu/VBoxContainer/boton_jugar" to="." method="_on_boton_jugar_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/boton_opciones" to="." method="_on_boton_opciones_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/boton_coleccion" to="." method="_on_boton_coleccion_pressed"]
[connection signal="pressed" from="menu/VBoxContainer/boton_salir" to="." method="_on_boton_salir_pressed"]
[connection signal="item_selected" from="opciones/TabContainer/Video/HBoxContainer/VBoxContainer2/screen_mode" to="." method="_on_screen_mode_item_selected"]
[connection signal="item_selected" from="opciones/TabContainer/Video/HBoxContainer/VBoxContainer2/v_sync" to="." method="_on_v_sync_item_selected"]
[connection signal="pressed" from="opciones/TabContainer/Video/volver_button" to="." method="_on_volver_button_pressed"]
[connection signal="pressed" from="personaliza/VBoxContainer/boton_info_mazo" to="." method="_on_boton_info_mazo_pressed"]
[connection signal="pressed" from="personaliza/VBoxContainer/boton_guardar_cambios" to="." method="_on_boton_guardar_cambios_pressed"]
[connection signal="pressed" from="personaliza/VBoxContainer/boton_volver_personaliza" to="." method="_on_boton_volver_personaliza_pressed"]
[connection signal="item_selected" from="personaliza/baraja_seleccion" to="." method="_on_baraja_seleccion_item_selected"]
[connection signal="pressed" from="coleccion/VBoxContainer/boton_editar_mazo" to="." method="_on_boton_editar_mazo_pressed"]
[connection signal="pressed" from="coleccion/VBoxContainer/boton_volver_coleccion" to="." method="_on_boton_volver_coleccion_pressed"]
[connection signal="pressed" from="confirmar_mazo/Panel/VBoxContainer/boton_seleccionar_mazo1" to="." method="_on_boton_seleccionar_mazo_1_pressed"]
[connection signal="pressed" from="confirmar_mazo/Panel/VBoxContainer/boton_seleccionar_mazo2" to="." method="_on_boton_seleccionar_mazo_2_pressed"]
[connection signal="pressed" from="confirmar_mazo/Panel/HBoxContainer/boton_proceder" to="." method="_on_boton_proceder_pressed"]
[connection signal="pressed" from="confirmar_mazo/Panel/HBoxContainer/boton_atras_confirmar" to="." method="_on_boton_atras_pressed"]
[connection signal="pressed" from="confirmar_mazo_coleccion/Panel/HBoxContainer/boton_guardar_mazo" to="." method="_on_boton_guardar_mazo_pressed"]
[connection signal="pressed" from="confirmar_mazo_coleccion/Panel/HBoxContainer/boton_atras_coleccion" to="." method="_on_boton_atras_coleccion_pressed"]
[connection signal="pressed" from="menu_info_mazo/Panel/boton_volver_info_mazo" to="." method="_on_boton_volver_info_mazo_pressed"]
